syntax = "proto3";

package networkspeed;

message Config {
  int64 last_check = 1;
  repeated Transfer transfers = 2;
}

message Transfer {
  int64 message_size = 1;
  string origin = 2;
  string destination = 3;
}

message TransferRequest {
  int64 byte_size = 1;
  bytes payload = 2;
}

message TransferResponse {
  int64 processing_time = 1;
}

message RecordRequest {
  Transfer transfer = 1;
}

message RecordResponse {}

service TransferService {
  rpc MakeTransfer(TransferRequest) returns (TransferResponse) {};
  rpc RecordTransfer(RecordRequest) returns (RecordResponse) {};
}

